# parallel_computing

./: .gitignore
1-merge/: CMakeLists.txt  GNUmakefile  bench.c  merge.c  merge.h  merge_par.c  merge_ref.c  test.c
1-merge/data/: bench.csv
1-prefix_sums/: CMakeLists.txt  GNUmakefile  bench.c  common.c  common.h  csv.h  hillis-steele.c  iterative.c  main.c  perf.c  perf.h  prefix.h  recursive.c  recursive_bench.c  recursive_test.c  reduction.c  reference.c  test.c  work.c
1-prefix_sums/data/: bench.csv  work.csv
2-merge/: GNUmakefile  bench.c  binsearch.cilk  main.cilk  merge.c  merge.h  recursive.cilk  reference.cilk  test.c
2-merge/data/: bench.csv
3-bucket_sort/: CMakeLists.txt  GNUmakefile  bench.c  bucket.c  bucket.h  bucket_ref.c  test.c
3-bucket_sort/data/: bench.csv
3-inclusive_scan/: CMakeLists.txt  GNUmakefile  arrayscan.c  arrayscan.h  arrayscan_par.c  arrayscan_ref.c  bench.c  exscan.h  exscan_hillis-steele.c  exscan_mpi.c  test.c
3-inclusive_scan/data/: bench.csv
3-stencil/: .gitignore  CMakeLists.txt  GNUmakefile  bench.c  matrix.c  matrix.h  stencil.c  stencil.h  stencil_ref.c  test.c
3-stencil/data/: bench.csv
common/: common.h  csv.c  csv.h  perf.c  perf.h
report/: .gitignore  GNUmakefile  functions.Rnw  report.Rnw
report/R-libs/xtable/: DESCRIPTION
report/R-libs/xtable/Meta/: Rd.rds  data.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds  vignette.rds
report/R-libs/xtable/R/: xtable.rdb  xtable.rdx
report/R-libs/xtable/doc/: index.html  xtableGallery.R
report/R-libs/xtable/help/: aliases.rds  paths.rds  xtable.rdb  xtable.rdx
report/R-libs/xtable/html/: 00Index.html
